--- a/optparse.cabal
+++ b/optparse.cabal
@@ -1,20 +1,63 @@
-name:                optparse
-version:             0.1.0.0
-synopsis:            Simple project template from stack
-description:         Please see README.md
-homepage:            https://github.com/githubuser/optparse#readme
-license:             BSD3
-license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
-category:            Web
-build-type:          Simple
-cabal-version:       >=1.10
+-- This file has been generated from package.yaml by hpack version 0.20.0.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: 7855554e571ca092bf9edbc03d9a8a7ac9bad5132b72786fd9827aa8f730332b
 
-executable optparse
-  hs-source-dirs:      src
-  main-is:             Main.hs
-  default-language:    Haskell2010
-  build-depends:         base >= 4.7 && < 5
-                       , optparse-applicative
+name:           optparse
+version:        0.1.0.0
+description:    Please see the README on Github at <https://github.com/githubuser/optparse#readme>
+homepage:       https://github.com/githubuser/optparse#readme
+bug-reports:    https://github.com/githubuser/optparse/issues
+author:         Author name here
+maintainer:     example@example.com
+copyright:      2018 Author name here
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+cabal-version:  >= 1.10
+
+extra-source-files:
+    ChangeLog.md
+    README.md
+
+source-repository head
+  type: git
+  location: https://github.com/githubuser/optparse
+
+library
+  hs-source-dirs:
+      src
+  build-depends:
+      base >=4.7 && <5
+    , optparse-applicative
+  exposed-modules:
+      Lib
+  other-modules:
+      Paths_optparse
+  default-language: Haskell2010
+
+executable optparse-exe
+  main-is: Main.hs
+  hs-source-dirs:
+      app
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , optparse
+  other-modules:
+      Paths_optparse
+  default-language: Haskell2010
+
+test-suite optparse-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs:
+      test
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , optparse
+  other-modules:
+      Paths_optparse
+  default-language: Haskell2010
